--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,12 @@
         android:text="TextView"
         tools:layout_editor_absoluteX="105dp"
         tools:layout_editor_absoluteY="89dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="208dp"
+        tools:layout_editor_absoluteY="356dp" />
 </android.support.constraint.ConstraintLayout>
